Menus in popup panels opening on mouse over #66538

Closed
opened 2019-07-08 01:21:43 +02:00 by TheRedWaxPolice · 8 comments

System Information
Win 10

Blender Version
Broken: (example: blender-2.80-699193713fc0-win64

Short description of error
The menus inside popup panels are opening on mouse over, even though that setting is turned off in the preferences.

Exact steps for others to reproduce the error
Just open any popup that has a menu in it and mouse over it...
2019-07-08_00-10-34.gif

2019-07-08_00-11-24.gif

2019-07-08_00-12-30.gif
(I'm not clicking)

**System Information** Win 10 **Blender Version** Broken: (example: blender-2.80-699193713fc0-win64 **Short description of error** The menus inside popup panels are opening on mouse over, even though that setting is turned off in the preferences. **Exact steps for others to reproduce the error** Just open any popup that has a menu in it and mouse over it... ![2019-07-08_00-10-34.gif](https://archive.blender.org/developer/F7573953/2019-07-08_00-10-34.gif) ![2019-07-08_00-11-24.gif](https://archive.blender.org/developer/F7573954/2019-07-08_00-11-24.gif) ![2019-07-08_00-12-30.gif](https://archive.blender.org/developer/F7573955/2019-07-08_00-12-30.gif) (I'm not clicking)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Campbell Barton was assigned by Philipp Oeser 2019-07-08 11:10:08 +02:00
Member

caused by b708917d94

caused by b708917d94afa3a77be5e571b1c36a364d2ec6b5

Added subscriber: @brecht

Added subscriber: @brecht

Unless this is trivial to fix, I think b708917d94 should be reverted.

Unless this is trivial to fix, I think b708917d94afa3a77be5e571b1c36a364d2ec6b5 should be reverted.

This issue was referenced by 50d0a74833

This issue was referenced by 50d0a7483384fe47b768af8902cb9a1e8d48d155

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66538
No description provided.