Fix T66538: Menus in popups opening on mouse over

Caused by b708917d94afa

Solve by restricting this change to popovers
instead of other kinds of menus (enums mainly).